Slides over 1/2 way done.

--- a/2022-talk/presentation/presentation.tex
+++ b/2022-talk/presentation/presentation.tex
@@ -337,7 +337,7 @@
         
         \smallskip
         
-        Use eigen-survival analysis to produce a predictive score for each patient that is a linear combinatin of their expression values for $G_X$
+        Use eigen-survival analysis to produce a predictive score for each patient that is a linear combinatin of their expression values for $G_X$.
 
         \smallskip
 
