Rough draft complete.

--- a/2022-talk/presentation/presentation.tex
+++ b/2022-talk/presentation/presentation.tex
@@ -513,4 +513,71 @@
         \large{Thank you!}
     \end{center}
 \end{frame}
+
+%------------------------------------------------
+
+\begin{frame} \frametitle{References}
+	
+	\begin{thebibliography}{99}
+		\footnotesize
+		
+		\bibitem[d-basis]{p1}
+			Adiricheva, Nation, et al (2015)
+			\newblock Measuring the Implications of the D-basis in Analysis of Data in Biomedical Studies
+			\newblock \href{https://github.com/tristanh314/lust-cancer-2019/blob/master/papers/Dbasinapp.pdf}{github}
+			
+		\bibitem[lust-2019]{p2}
+			Nation, Okimoto, et al (2019)
+			\newblock A Comparative Analyisis of mRNA Expression for 33 Different Cancers, Part 1: The LUST Algorithm
+			\newblock \href{https://github.com/tristanh314/lust-cancer-2019/blob/master/papers/lust_2019_part_1.pdf}{github}
+        
+            \bibitem[melanoma]{p3}
+			Nation (2019)
+			\newblock A Genetic Signiature Predicting Survival and Metastasis for Melanoma Patients
+			\newblock \href{https://github.com/tristanh314/lust-cancer-2019/blob/master/papers/melanoma_signature_2.pdf}{github}
+    
+        \end{thebibliography}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Acknowledgements}
+	
+	\begin{columns}[t] 
+		\begin{column}{0.45\textwidth}
+			\textbf{University of Hawaii}
+			\begin{itemize}
+				\item Professor Emeritus J.B. Nation
+				\item Professor Emeritus Ralph Freese
+				\item Professor Emeritus Bill Lampe
+			\end{itemize}
+			\textbf{Portland State University}
+			\begin{itemize}
+				\item Professor Wayne Wakeland
+				\item Professor Martin Zwick
+			\end{itemize}
+		\end{column}		
+		\begin{column}{0.45\textwidth}
+			\textbf{Inspiration and Moral Support}
+			\begin{itemize}
+                \item Sig-Linda Jacobson
+                \item John Eric Holmes (RIP)
+				\item Friends and Family
+                \item Charles Lutwidge Dodgson
+			\end{itemize}
+            \textbf{Special Research Assistant}
+            \begin{itemize}
+                \item Doctor Frankenstein Jacobson
+            \end{itemize}
+		\end{column}
+	\end{columns}
+\end{frame}
+
+\begin{frame}
+    \frametitle{So Helpful...}
+
+    \begin{center}
+        \includegraphics[scale=0.075]{frankenstein_helping.jpg}
+    \end{center}
+\end{frame}
 \end{document}
