--- a/2022-talk/presentation/presentation.tex
+++ b/2022-talk/presentation/presentation.tex
@@ -168,11 +168,11 @@
 \begin{frame}
 	\frametitle{Abstract}
 	
-	In 2019 the UH Cancer Center hosted a project to identify genetic factors of interest in various types of cancer.
+	In 2019 a collaboration hosted by the UH Manoa Cancer Center culminated in a project to identify genetic factors of interest in various types of cancer.
 	\pause
 	\bigskip 
 
-	One of the results of this effort was the use of the Lattice Upstream Targeting (LUST) Algorithm to analyze mRNA expression data for 33 different types of cancer in the TCGA database. This effort will be the topic of this presentation.
+	The result was the development of the Lattice Upstream Targeting (LUST) Algorithm to analyze mRNA expression data for 33 different types of cancer in the TCGA database.
 	\pause
     \bigskip
 
@@ -180,7 +180,7 @@
     \pause
 	\bigskip 
 
-    Results of a similar project conducted using data proprietary to the UH cancer center led to studies seeking to identfy new chemical treatments.
+    Per J.B. Nation the UH Manoa Cancer Center separately used the results of these efforts to direct studies seeking to identfy new chemical treatments.
 \end{frame}
 
 %------------------------------------------------
@@ -194,12 +194,12 @@
         \pause
         \item 
         \begin{enumerate}
-            \item The first run is on the entire expression matrix and uses a graph theoretic objective function to rank the groups obtained. This pass identifies and ranks a small set of \emph{metagenes} associated with the given cancer.
+            \item The first unsupervised run is on the entire expression matrix. This pass identifies and ranks a small set of \emph{metagenes} associated with the given cancer.
             \pause
-            \item The second run is on the expression matrix for each metagene and supervised by survival time as the objective function using the Fisher score to rank the results. This pass identifies small predictive \emph{signiatures} for each metagene.
+            \item The second run is supervised on the expression matrices for each metagene. This pass identifies small predictive \emph{signiatures} for each metagene.
         \end{enumerate}
         \pause
-        \item In some cases, certain signiatures would seem approprite to use as guides for treatment.
+        \item Certain signiatures, particularly those related to prcesses involved with immune system response, would seem approprite to use as guides for treatment.
     \end{itemize}
 \end{frame}
 
@@ -216,7 +216,7 @@
         \pause
         \item Normalized gene expression files sequenced by Illumina HiSeq are used, reporting expression levels for 20,531 genes.
         \pause
-        \item Samples from tissue surrounding tumors are removed so that each patient has a single record representing tumor tissue.
+        \item Samples from the tissue surrounding the tumors are removed so that each patient has a single record representing tumor tissue.
         \pause
         \item The expression data is log transformed, quantile normalized, and row centered.
         \pause
@@ -261,7 +261,6 @@
     \begin{block}{Output}
         \begin{itemize}
             \item Metagenes (Part I) or signiatures (Part II) ranked by an objective function.
-            \item For Part II only, a score placing patients into high and low risk groups.
             \item For Part II only, Kaplan-Meyer survival curves.
         \end{itemize}
     \end{block}
@@ -275,7 +274,7 @@
     \bigskip
     \pause
     \begin{definition}
-        For a gene $X$, let $X^{+}$ denote the number of columns marked with 1 and $x^{-}$ the number of columns marked with -1. We say $X$ \emph{regulates} $Y$, denoted $X \rightarrow Y$, if
+        For a gene $X$, let $X^{+}$ denote the set of columns marked with 1 and $X^{-}$ the set of columns marked with -1. We say $X$ \emph{regulates} $Y$, denoted $X \rightarrow Y$, if
         \begin{enumerate}
             \item $\frac{\left| X^{+} \cap Y^{+} \right|}{\left| X^{+} \right|} \geq conftol,\ \mathrm{and}$
             \item $\frac{\left| X^{-} \cap Y^{-} \right|}{\left| X^{-} \right|} \geq conftol.$
@@ -300,7 +299,7 @@
         \frac{\left| F_X \cap F_Y \right|}{\min(\left| F_X \right|, \left| F_Y \right|)} \geq overlap
     \end{equation*}
     \pause
-    In this study, default values for \emph{overlap} were 0.5 for Part I and 0.6 for Part II. Merging was performed only once.
+    In this study, default values for \emph{overlap} were 0.5 for Part I and 0.6 for Part II. Merging was performed only once. For Part I, the resulting groups are called \emph{metagenes}.
 \end{frame}
 
 \begin{frame}
@@ -312,7 +311,7 @@
         \pause
         We use a measure of the probability of obtaining a set of vertices of size $n$ with $\left| E \right|$ edges.
         \begin{equation*}
-            f(M) = \frac{\left| E \right|}{n-1}
+            f(M) = n \cdot \frac{\left| E \right|}{n(n-1)}= \frac{\left| E \right|}{n-1}
         \end{equation*}
     \end{block}
 \end{frame}
@@ -360,48 +359,51 @@
     \end{block}
 \end{frame}
 
-\begin{frame}
-    \frametitle{Fase Discovery Rates - Notation}
-    Fix a density $D$, let $p=\frac{D}{2}$, and let $\gamma = conftol$. Consider an $m \times n$ matrix with entries from $\left\{ -1, 0, 1 \right\}$ assigned from uniform probability distributions with densities $p,\ p,\ 1-2p$.
-    \smallskip
-    \pause
-    \begin{block}{Probability row $X$ has $a$ entries $1$ and $b$ entries $-1$}
-        \begin{equation*}
-            g(n,a,b,p) = \binom{n}{a+b}p^{a+b}(1-2p)^{n-a-b}
-        \end{equation*}        
-    \end{block}
-    \begin{block}{Probability row $Y$ has $c$ entries $1$ in $a$ columns}
-        \begin{equation*}
-            h(a,c,p) = \binom{n}{c}p^{c}(1-p)^{n-c}
-        \end{equation*}        
-    \end{block}
-\end{frame}
+% \begin{frame}
+%     \frametitle{False Discovery Rates - Notation}
+%     Fix a density $D$, let $p=\frac{D}{2}$, and let $\gamma = conftol$. Consider an $m \times n$ matrix with entries from $\left\{ -1, 0, 1 \right\}$ assigned from uniform probability distributions with densities $p,\ p,\ 1-2p$.
+%     \smallskip
+%     \pause
+%     \begin{block}{Probability row $X$ has $a$ entries $1$ and $b$ entries $-1$}
+%         \begin{equation*}
+%             g(n,a,b,p) = \binom{n}{a+b}p^{a+b}(1-2p)^{n-a-b}
+%         \end{equation*}        
+%     \end{block}
+%     \begin{block}{Probability row $Y$ has $c$ entries $1$ in $a$ columns}
+%         \begin{equation*}
+%             h(a,c,p) = \binom{n}{c}p^{c}(1-p)^{n-c}
+%         \end{equation*}        
+%     \end{block}
+% \end{frame}
 
-\begin{frame}
-    \frametitle{Fase Discovery Rates - Derivation}
-    Fix a density $D$, let $p=\frac{D}{2}$, and let $\gamma = conftol$. Consider an $m \times n$ matrix with entries from $\left\{ -1, 0, 1 \right\}$ assigned from uniform probability distributions with densities $p,\ p,\ 1-2p$.
-    \pause
-    \smallskip
-    \begin{block}{Probability $X \rightarrow Y$}
-        \begin{equation*}
-            \sum_{1\leq a,b\leq n}g(n,a,b,p)\left( \sum_{a\geq c \geq \gamma a} h(a,c,p) \right)\left( \sum_{b\geq d \geq \gamma d} h(b,d,p) \right)
-        \end{equation*}        
-    \end{block}
-    \pause
-    \begin{block}{Expected number of relations $X \rightarrow Y$}
-        \begin{equation*}
-            E = m(m-1) \cdot \mathrm{prob}(X \rightarrow Y)
-        \end{equation*}        
-    \end{block}
-\end{frame}
+% \begin{frame}
+%     \frametitle{False Discovery Rates - Derivation}
+%     Fix a density $D$, let $p=\frac{D}{2}$, and let $\gamma = conftol$. Consider an $m \times n$ matrix with entries from $\left\{ -1, 0, 1 \right\}$ assigned from uniform probability distributions with densities $p,\ p,\ 1-2p$.
+%     \smallskip
+%     \begin{block}{Probability $X \rightarrow Y$}
+%         \begin{equation*}
+%             \sum_{1\leq a,b\leq n}g(n,a,b,p)\left( \sum_{a\geq c \geq \gamma a} h(a,c,p) \right)\left( \sum_{b\geq d \geq \gamma d} h(b,d,p) \right)
+%         \end{equation*}        
+%     \end{block}
+%     \pause
+%     \begin{block}{Expected number of relations $X \rightarrow Y$}
+%         \begin{equation*}
+%             E = m(m-1) \cdot \mathrm{prob}(X \rightarrow Y)
+%         \end{equation*}        
+%     \end{block}
+% \end{frame}
 
 \begin{frame}
     \frametitle{False Discovery Rates - In Practice}
+    The predicted number of random arrows is quite low.
+    \pause
+    \bigskip
+
     Testing on permuted data matrices shows these estimates are quite accurate for values of $conftol$ used in this study.
     \pause
     \bigskip
 
-    The probability of random edges or used $conftol$ is very low, on the order of $10^{-5}$ at most.
+    The probability of random edges for used values of $conftol$ is very low, on the order of $10^{-5}$ at most.
     \pause
     \bigskip
 
@@ -414,15 +416,18 @@
 
 \begin{frame}
     \frametitle{Sensitivity - Simulations}
-    To test the sensitiivty of LUST, simulations were run $5,000 \times 120$ signal matrix $\mathbf{S}$ with a step signal in the first 200 rows consisting of 30 enttries of $1$, 30 entries of $-1$, and 60 zeros.
+    To test the sensitiivty of LUST, simulations were run on a $5,000 \times 120$ signal matrix $\mathbf{S}$ with a step signal in the first 200 rows consisting of 30 enttries of $1$, 30 entries of $-1$, and 60 zeros.
     \pause
     \bigskip
+    
     A Gaussian noise matrix was made to create $\mathbf{M} = \mathbf{S} + a\mathbf{N}$, using $a$ to adjust signal-to-noise ratio.
     \pause
     \bigskip
+    
     Repeated tests were run at various levels of $conftol$. 
     \pause
     \bigskip
+    
     The conclusion was that the signals detected by Part I are quite strong.
 \end{frame}
 
@@ -508,10 +513,6 @@
 
         \emph{\ldots and so is the algorithm.''} - J.B. Nation
     \end{block}
-    \pause
-    \begin{center}
-        \large{Thank you!}
-    \end{center}
 \end{frame}
 
 %------------------------------------------------
@@ -558,14 +559,15 @@
 			\end{itemize}
 		\end{column}		
 		\begin{column}{0.45\textwidth}
-			\textbf{Inspiration and Moral Support}
+			\textbf{Moral Support and Inspiration}
 			\begin{itemize}
                 \item Sig-Linda Jacobson
                 \item John Eric Holmes (RIP)
 				\item Friends and Family
+				\item Agnes Meyer Driscoll
                 \item Charles Lutwidge Dodgson
 			\end{itemize}
-            \textbf{Special Research Assistant}
+            \textbf{Special Assistant}
             \begin{itemize}
                 \item Doctor Frankenstein Jacobson
             \end{itemize}
@@ -574,7 +576,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{So Helpful...}
+    \frametitle{Thank you!}
 
     \begin{center}
         \includegraphics[scale=0.075]{frankenstein_helping.jpg}
